5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1691_1952.log
== TEST (2019-04-24 19:24:34) 
-- CODE:
x=float(input("Digite o salario liquido: "))
if(x<=1659.38):
	p=x*0.92
elif(x>=1659.39)and(x<=2765.67):
	p=x*0.91
elif(x>=2765.67)and(x<=5531.31):
	p=x*0.89
elif(x>5531.31):
	p=x-608.44
-- OUTPUT:
A esquerda da reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:26:57) 
-- CODE:
x=float(input("Digite o salario liquido: "))
if(x<=1659.38):
	p=x*0.92
elif(x>=1659.39)and(x<=2765.67):
	p=x*0.91
elif(x>=2765.67)and(x<=5531.31):
	p=x*0.89
elif(x>5531.31):
	p=x-608.44

if(p<=1903.98):
	p=p-0
elif(p>=1903.99)and(p<=2826.65):
	p=p*0.92,5
elif(p>=2826.66)and(p<=3751.05):
	p=
	
	
-- ERROR:
File "XXXX", line 16
    p=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:28:38) 
-- CODE:
x=float(input("Digite o salario liquido: "))
if(x<=1659.38):
	p=x*0.92
elif(x>=1659.39)and(x<=2765.67):
	p=x*0.91
elif(x>=2765.67)and(x<=5531.31):
	p=x*0.89
elif(x>5531.31):
	p=x-608.44

if(p<=1903.98):
	p=p-0
elif(p>=1903.99)and(p<=2826.65):
	p=p*0.92,5
elif(p>=2826.66)and(p<=3751.05):
	p=p*0.85
elif(p>=3751.06)and(p<=4664.68):
	p=p*0.77,5
else:
	p=p*0.72,5
	
	
	
-- ERROR:
File "XXXX", line 16
    p=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:29:40) 
-- CODE:
x=float(input("Digite o salario liquido: "))
if(x<=1659.38):
	p=x*0.92
elif(x>=1659.39)and(x<=2765.67):
	p=x*0.91
elif(x>=2765.67)and(x<=5531.31):
	p=x*0.89
elif(x>5531.31):
	p=x-608.44

if(p<=1903.98):
	p=p-0
elif(p>=1903.99)and(p<=2826.65):
	p=p*0.92,5
elif(p>=2826.66)and(p<=3751.05):
	p=p*0.85
elif(p>=3751.06)and(p<=4664.68):
	p=p*0.77,5
else:
	p=p*0.72,5

print("Salario liquido = R$",(round(p,2)))	
	
	
	
-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:30:23) 
-- CODE:
x=float(input("Digite o salario liquido: "))
if(x<=1659.38):
	p=x*0.92
elif(x>=1659.39)and(x<=2765.67):
	p=x*0.91
elif(x>=2765.67)and(x<=5531.31):
	p=x*0.89
elif(x>5531.31):
	p=x-608.44

if(p<=1903.98):
	p=p-0
elif(p>=1903.99)and(p<=2826.65):
	p=p*0.92,5
elif(p>=2826.66)and(p<=3751.05):
	p=p*0.85
elif(p>=3751.06)and(p<=4664.68):
	p=p*0.77,5
else:
	p=p*0.72,5

q=round(p,2)	
print("Salario liquido = R$",q)	
	
	
	
-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:30:51) 
-- CODE:
x=float(input("Digite o salario liquido: "))
if(x<=1659.38):
	p=x*0.92
elif(x>=1659.39)and(x<=2765.67):
	p=x*0.91
elif(x>=2765.67)and(x<=5531.31):
	p=x*0.89
elif(x>5531.31):
	p=x-608.44

if(p<=1903.98):
	p=p-0
elif(p>=1903.99)and(p<=2826.65):
	p=p*0.92,5
elif(p>=2826.66)and(p<=3751.05):
	p=p*0.85
elif(p>=3751.06)and(p<=4664.68):
	p=p*0.77,5
else:
	p=p*0.72,5


print("Salario liquido = R$",p)	
	
	
	
-- OUTPUT:
Salario liquido = R$ 1135.7952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:36:12) 
-- CODE:
x=float(input("Digite o salario liquido: "))
if(x<=1659.38):
	p=x*0.92
elif(x>=1659.39)and(x<=2765.67):
	p=x*0.91
elif(x>=2765.67)and(x<=5531.31):
	p=x*0.89
elif(x>5531.31):
	p=x-608.44

if(p<=1903.98):
	p=p-0
elif(p>=1903.99)and(p<=2826.65):
	p=p*(92.5/100)
elif(p>=2826.66)and(p<=3751.05):
	p=p*(85/100)
elif(p>=3751.06)and(p<=4664.68):
	p=p*(77.5/100)
else:
	p=p*(72.5/100)


print("Salario liquido = R$",p)	
	
	
	
-- OUTPUT:
Salario liquido = R$ 1135.7952
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:36:23) 
-- CODE:
x=float(input("Digite o salario liquido: "))
if(x<=1659.38):
	p=x*0.92
elif(x>=1659.39)and(x<=2765.67):
	p=x*0.91
elif(x>=2765.67)and(x<=5531.31):
	p=x*0.89
elif(x>5531.31):
	p=x-608.44

if(p<=1903.98):
	p=p-0
elif(p>=1903.99)and(p<=2826.65):
	p=p*(92.5/100)
elif(p>=2826.66)and(p<=3751.05):
	p=p*(85/100)
elif(p>=3751.06)and(p<=4664.68):
	p=p*(77.5/100)
else:
	p=p*(72.5/100)


print("Salario liquido = R$",p)	
	
	
	
-- EXECUTION TIME:
0.196785
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$ 1135.7952
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$ 3571.7559999999994
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:36:34) 
-- CODE:
x=float(input("Digite o salario liquido: "))
if(x<=1659.38):
	p=x*0.92
elif(x>=1659.39)and(x<=2765.67):
	p=x*0.91
elif(x>=2765.67)and(x<=5531.31):
	p=x*0.89
elif(x>5531.31):
	p=x-608.44

if(p<=1903.98):
	p=p-0
elif(p>=1903.99)and(p<=2826.65):
	p=p*(92.5/100)
elif(p>=2826.66)and(p<=3751.05):
	p=p*(85/100)
elif(p>=3751.06)and(p<=4664.68):
	p=p*(77.5/100)
else:
	p=p*(72.5/100)


print("Salario liquido = R$",(round(p,2)))	
	
	
	
-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:36:43) 
-- CODE:
x=float(input("Digite o salario liquido: "))
if(x<=1659.38):
	p=x*0.92
elif(x>=1659.39)and(x<=2765.67):
	p=x*0.91
elif(x>=2765.67)and(x<=5531.31):
	p=x*0.89
elif(x>5531.31):
	p=x-608.44

if(p<=1903.98):
	p=p-0
elif(p>=1903.99)and(p<=2826.65):
	p=p*(92.5/100)
elif(p>=2826.66)and(p<=3751.05):
	p=p*(85/100)
elif(p>=3751.06)and(p<=4664.68):
	p=p*(77.5/100)
else:
	p=p*(72.5/100)


print("Salario liquido = R$",(round(p,2)))	
	
	
	
-- EXECUTION TIME:
0.195114
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$ 3571.76
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 01:16:52) 
-- CODE:
x=float(input("Digite o salario liquido: "))
if(x<=1659.38):
	p=x*0.92
elif(x>=1659.39)and(x<=2765.67):
	p=x*0.91
elif(x>=2765.67)and(x<=5531.31):
	p=x*0.89
elif(x>5531.31):
	p=x-608.44

if(p<=1903.98):
	p=p-0
elif(p>=1903.99)and(p<=2826.65):
	p=p*(92.5/100)
elif(p>=2826.66)and(p<=3751.05):
	p=p*(85/100)
elif(p>=3751.06)and(p<=4664.68):
	p=p*(77.5/100)
else:
	p=p*(72.5/100)


print("Salario liquido = R$",(round(p,2)))	
	
	
	
-- EXECUTION TIME:
0.127167
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$ 3571.76
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
